--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  go_router:
+  flutter_riverpod:
+  http:
 
 
   # The following adds the Cupertino Icons font to your application.
