--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   go_router:
   flutter_riverpod:
   http:
+  syncfusion_flutter_charts: ^25.2.3+1
+  intl:
 
 
   # The following adds the Cupertino Icons font to your application.
